lync/tests/fails/if_cond_not_bool.scm
(define f
  (lambda ()
    (if 1 2 3)))
